--- a/Makefile.txt
+++ b/Makefile.txt
@@ -3,13 +3,13 @@
 all: main
 
 main: main.o logging.o
-	gcc -o main main.o logging.o
+	gcc -o main main.o fila.o
 
-main.o: main.c logging.h
+main.o: main.c fila.h
 	gcc -o main.o main.c -c -W -Wall -ansi -pedantic -std=gnu11
 
-logging.o: logging.c logging.h
-	gcc -o logging.o logging.c -c -W -Wall -ansi -pedantic -std=gnu11
+logging.o: fila.c fila.h
+	gcc -o fila.o fila.c -c -W -Wall -ansi -pedantic -std=gnu11
 
 clean:
 	rm -rf *.o *~ main
